--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app",
-    "dev": "nodemon app"
-  },
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "build": "echo 'No build step needed'",
+    "vercel-build": "npm install"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
