--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "autoprefixer": "^10.4.21",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
-    "next": "15.2.1",
+    "next": "^15.2.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -22,7 +22,8 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4.0.12"
+    "cross-env": "^7.0.3",
+    "postcss-loader": "^8.0.0",
+    "tailwindcss": "^4.0.13"
   }
 }
